# shovel-ssg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: inject_ws.html  main.rs
test/: index.html
test/assets/: header.component.html
test/foo/: index.md
test/foo/bar/: baz.txt
