[package]
name = "shovel"
version = "0.0.1"
edition = "2021"

[features]
default = ["dev"]
dev = ["dep:log", "dep:notify", "dep:tokio", "dep:warp"]

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
ignore = "0.4.20"
log = { version = "0.4.19", optional = true }
markdown = "0.3.0"
notify = { version = "6.0.1", optional = true }
regex = "1.9.1"
simple_logger = "4.2.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"], optional = true }
warp = { version = "0.3.5", optional = true }

#        ▒▒                                            
#      ░░▓▓▒▒                                          
#      ▓▓▓▓░░                                          
#    ▓▓▓▓    ▓▓                                        
#  ░░▓▓      ██                                        
#    ██      ▓▓                                        
#      ▒▒▒▒▒▒▓▓                                        
#            ▒▒▓▓░░                                    
#              ░░░░                                    
#                  ░░░░                                
#                      ░░                              
#                        ░░                            
#                          ░░                          
#                          ░░██                        
#                            ▓▓██                      
#                            ░░▓▓▓▓                    
#                              ░░██▓▓                  
#                                ░░████      ▓▓        
#                                    ██▓▓▓▓██▓▓▓▓      
#                                      ██▓▓██▓▓▓▓▓▓    
#                                    ▓▓▓▓▓▓██▓▓▓▓▓▓▓▓░░
#                                  ▒▒██████▓▓██▓▓▓▓▓▓▓▓
#                                    ░░████████▓▓▓▓▓▓▓▓
#                                        ██████████▓▓▓▓
#                                          ████████████
#                                            ██████████
#
#
#       Art found at https://textart.sh/topic/shovel
