[package]
name = "shovel"
version = "0.0.1"
edition = "2021"

[features]
default = ["dev"]
dev = ["dep:log", "dep:notify", "dep:tokio", "dep:tungstenite", "dep:warp"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.1", features = ["derive"] }
ignore = "0.4.21"
log = { version = "0.4.20", optional = true }
markdown = "0.3.0"
notify = { version = "6.1.1", optional = true }
regex = "1.10.2"
simple_logger = "4.3.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"], optional = true }
tungstenite = { version = "0.20.1", optional = true }
warp = { version = "0.3.6", optional = true }

#        ▒▒                                            
#      ░░▓▓▒▒                                          
#      ▓▓▓▓░░                                          
#    ▓▓▓▓    ▓▓                                        
#  ░░▓▓      ██                                        
#    ██      ▓▓                                        
#      ▒▒▒▒▒▒▓▓                                        
#            ▒▒▓▓░░                                    
#              ░░░░                                    
#                  ░░░░                                
#                      ░░                              
#                        ░░                            
#                          ░░                          
#                          ░░██                        
#                            ▓▓██                      
#                            ░░▓▓▓▓                    
#                              ░░██▓▓                  
#                                ░░████      ▓▓        
#                                    ██▓▓▓▓██▓▓▓▓      
#                                      ██▓▓██▓▓▓▓▓▓    
#                                    ▓▓▓▓▓▓██▓▓▓▓▓▓▓▓░░
#                                  ▒▒██████▓▓██▓▓▓▓▓▓▓▓
#                                    ░░████████▓▓▓▓▓▓▓▓
#                                        ██████████▓▓▓▓
#                                          ████████████
#                                            ██████████
#
#
#       Art found at https://textart.sh/topic/shovel
